[project]
name = "dashboard-comparison-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.2.0",
    "palmerpenguins>=0.1.4",
    "pandas>=2.3.2",
    "plotnine>=0.15.0",
    "shiny>=1.5.0",
    "streamlit>=1.50.0",
]
